  * debian/libwebkitgtk*.symbols:
  - added DRT optional symbols that are different on i386/powerpc
  * debian/control:
  - replace dh_clean -k call with dh_prep
  - bump Build-Depends on debhelper, for dh_prep
  - bump Dependency on libsoup to for the -dev packages to match the
    Build-Dependency
  - Recommend gstreamer packages required to play most formats
    with <video> and <audio>

 -- Gustavo Noronha Silva <kov@debian.org>  Sat, 10 Mar 2012 23:20:09 -0300

webkit (1.7.90+svn20120304-1) experimental; urgency=low

  * New development release
  * debian/patches/01_double-conversion.patch,
    debian/patches/03_fix-documentation-build.patch,
    debian/patches/04_hurd-fix.patch:
  - removed; applied upstream
  * debian/*.symbols:
  - updated
  * Merged changes done in 1.6.3-2
  * debian/control:
  - Put all gir1.2-* packages into the introspection section.

 -- Gustavo Noronha Silva <kov@debian.org>  Sun, 04 Mar 2012 16:28:56 -0300

webkit (1.7.5-1) experimental; urgency=low

  * New development release
  * debian/patches/03_fix-documentation-build.patch:
  - refreshed, with changes from upstream
  * debian/patches/04_hurd-fix.patch:
  - refreshed;
  * Merged changes done in 1.6.3-1
  * debian/*.symbols:
  - updated symbols file with ABI changes

 -- Gustavo Noronha Silva <kov@debian.org>  Fri, 17 Feb 2012 11:48:31 -0200

webkit (1.7.4-1) experimental; urgency=low

  * New development release
  * debian/patches/01_double-conversion.patch:
  - refreshed; partially applied upstream
  * debian/patches/03_freebsd-fix.patch,
    debian/patches/04_pkgconfig-fix.patch:
  - removed; applied upstream
  * debian/patches/03_fix-documentation-build.patch:
  - added; fix building docs for the GTK+ 2 library
  * debian/control:
  - update build-dependency for libsoup2.4-dev to 2.37.4
  - add libgl1-mesa-dev as a B-D, since we now build with
    WebGL enabled by default
  * debian/rules:
  - adapted doc installation to the new system
  * debian/*.install: