@@ -25,10 +25,11 @@ ifneq (,$(findstring $(DEB_BUILD_ARCH),mips mipsel s390 s390x))
         CFLAGS += -gstabs
 endif
 
-ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-	MAKEARGUMENTS += -j$(NUMJOBS)
-endif
+# FIXME: parallel builds are currently not 100% working, so disable
+#ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+#	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+#	MAKEARGUMENTS += -j$(NUMJOBS)
+#endif
 
 clean:
 	dh_testdir
